--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,7 +21,12 @@ body ul{
 }
 .menu_bar {	
 	padding-top:0px;
+	padding-left: 0px;
 	float: right;
+	display:inline;
+	margin-left:auto;
+	margin-right:auto;
+
 }
 
 	.menu_bar form{
@@ -30,19 +35,13 @@ body ul{
 
 	.menu_bar li{
 		display:inline;
-		margin: 0px 20px;
+		margin: 0px 10px;
 		padding: 4px;
 		background-color:white;
-	}
-#navbar {
-	display:inline;
-	margin-left:auto;
-	margin-right:auto;
-}
-	#navbar li{
 		border-radius:5px;
-		background-color:DDDDDD;
+		background-color:#DDDDDD;
 	}
+
 #head_bar {
 	padding-top: 32px;
 	padding-bottom: 45px;
