--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,7 +3,8 @@
 				<ul class="menu_bar" id="navbar">
 					<li><a href="/">Home</a></li>
 					<li>What is Populi?</li>
-					<li><a href="/campaigns/">Browse Candidates</a></li>
+					<li><a href="/campaigns/">Campaigns</a></li>
+					<li><a href="/users">Candidates</a></li>
 					<li><a href="http://vox.p.opu.li">Blog</a>
 					<li><a href="/campaigns/mine">Campaign Control Panel</a></li>
 					  <% if current_user %>
