--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing users</h1>
 
-<table class="table">
+<table border="1">
   <tr>
     <th>Username</th>
     <th>First name</th>
@@ -26,11 +26,14 @@
     <td><%= user.state %></td>
     <td><%= user.zip %></td>
     <td><%= link_to 'Show', user %></td>
+    <% if (user.id.to_i == session[:user_id].to_i) %>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
     <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <% end %>
   </tr>
 <% end %>
 </table>
+
 
 <br />
 
