--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,11 +6,6 @@
 </p>
 
 <p>
-  <b>Password:</b>
-  <%= @user.password %>
-</p>
-
-<p>
   <b>First name:</b>
   <%= @user.first_name %>
 </p>
@@ -45,5 +40,7 @@
   <%= @user.zip %>
 </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
+<% if @user.id == session[:user_id] %>
+  <%= link_to 'Edit', edit_user_path(@user) %> |
+<% end %>
 <%= link_to 'Back', users_path %>
