--- a/app/views/backbone/index.html.erb
+++ b/app/views/backbone/index.html.erb
@@ -5,9 +5,9 @@
 			campaigns you can believe in.</p>
 				<button type="button">Learn More!</button><br />
 			</div>
-			<h2 id="near_you">Candidates Near You</h2>
+			<h2 id="near_you">Candidates Near Mountain View CA</h2>
 			<% for i in 1..4 
-				@campaign = Campaign.find(rand(1..@last_camp.id))%>
+				@campaign = Campaign.find(@random_campaigns[i])%>
 				<div class="thumbnail">
 			        <% @candidate = User.find( @campaign.user_id) %>
 			        <%= image_tag @candidate.photo %>
