--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,10 +9,10 @@
 					<li><a href="/campaigns/mine">Campaign Control Panel</a></li>
 					  <% if current_user %>
 					    <li>Logged in as <%= current_user.email %>.</li>
-					    <li><%= link_to "Log out", log_out_path %></li>
 					    <li><a href="http:/users/<%= session[:user_id] %>"> My Profile </a></li>
+					    <li><%= link_to "Log out", log_out_path %></li>
 					  <% else %>
-					    <li><%= link_to "Sign up", sign_up_path %> or</li>
+					    <li><%= link_to "Sign up", sign_up_path %></li>
 					    <li><%= link_to "log in", log_in_path %></li>
 					  <% end %>
 				</ul>
