--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -19,6 +19,6 @@
                 <td><%= campaign.end %></td>
             </tbody>
         </table>
-        <%= link_to 'Show More', campaign %>
+        <button type="button"><%= link_to 'Show More', campaign %></button>
     </div>
 <% end %>
