--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,39 +1,39 @@
 <h1>Listing users</h1>
-<table border="1">
-  <tr>
-    <th>Username</th>
-    <th>First name</th>
-    <th>Last name</th>
-    <th>Address</th>
-    <th>Address2</th>
-    <th>City</th>
-    <th>State</th>
-    <th>Zip</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @users.each do |user| %>
-  <tr>
-    <td><%= user.username %></td>
-    <td><%= user.first_name %></td>
-    <td><%= user.last_name %></td>
-    <td><%= user.address %></td>
-    <td><%= user.address2 %></td>
-    <td><%= user.city %></td>
-    <td><%= user.state %></td>
-    <td><%= user.zip %></td>
-    <td><%= link_to 'Show', user %></td>
-    <% if (user.id.to_i == session[:user_id].to_i) %>
-    <td><%= link_to 'Edit', edit_user_path(user) %></td>
-    <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    <% end %>
-  </tr>
+<%= link_to 'New User', new_user_path %><br />
+<% if session[:user_id] %>
+     <div class="thumbnail">
+        <%= image_tag @my_profile.photo %>
+        <ul>
+            <li>User Name: <%= @my_profile.username %></li>
+            <li>First Name: <%= @my_profile.first_name %></li>
+            <li>Last Name: <%= @my_profile.last_name %></li>
+            <li>Address: <%= @my_profile.address %></li>
+            <li>More Address: <%= @my_profile.address2 %></li>
+            <li>City: <%= @my_profile.city %></li>
+            <li>State: <%= @my_profile.state %></li>
+            <li>Zip: <%= @my_profile.zip %></li>
+            <li><button type="button"><%= link_to 'Destroy', @my_profile, method: :delete, data: { confirm: 'Are you sure?' } %></button></li>
+            <li><button type="button"><%= link_to 'Edit', edit_user_path(@my_profile) %></button></li>
+            <li><button type="button"><%= link_to 'Show', @my_profile %></button></li>
+        </ul>
+    </div>
 <% end %>
-</table>
+<% @users.each do |user| %>
+    <% if (user.id.to_i != session[:user_id].to_i) %>
+        <div class="thumbnail">
+            <%= image_tag user.photo %>
+            <ul>
+                <li>User Name: <%= user.username %></li>
+                <li>First Name: <%= user.first_name %></li>
+                <li>Last Name: <%= user.last_name %></li>
+                <li>Address: <%= user.address %></li>
+                <li>More Address: <%= user.address2 %></li>
+                <li>City: <%= user.city %></li>
+                <li>State: <%= user.state %></li>
+                <li>Zip: <%= user.zip %></li>
 
-
-<br />
-
-<%= link_to 'New User', new_user_path %>
+                <li><button type="button"><%= link_to 'Show', user %></button></li>
+            </ul>
+        </div>
+    <% end %>
+<% end %>
