--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -93,3 +93,15 @@ button{
 	.thumbnail a {
 		text-decoration:none;
 	}
+#About {
+	margin-top:50px;
+	background-color:#EEEEEE;
+	border-radius:10px;
+	margin-left:auto;
+	margin-right:auto;
+	border:1px solid black;
+	width: 600px;
+}
+	#about h1{
+		text-align:center;
+	}
