--- a/app/views/backbone/index.html.erb
+++ b/app/views/backbone/index.html.erb
@@ -3,7 +3,7 @@
 			<p>Get funding for your own grassroots campaign.</p>
 			<p>Donate or volunteer to 
 			campaigns you can believe in.</p>
-				<button type="button">Learn More!</button><br />
+				<button type="button"><%= link_to "Learn More!", "about" %></button><br />
 			</div>
 			<h2 id="near_you">Candidates Near Mountain View CA</h2>
 			<% for i in 0..3 
