--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
 				<h1 id="populi">Populi</h1>
 				<ul class="menu_bar" id="navbar">
 					<li><a href="/">Home</a></li>
-					<li>What is Populi?</li>
+					<li><a href="about">What is Populi?</a></li>
 					<li><a href="/campaigns/">Campaigns</a></li>
 					<li><a href="/users">Candidates</a></li>
 					<li><a href="http://vox.p.opu.li">Blog</a>
